k8s/base/service-openapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: nrp-accounting-openapi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: openapi
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
